minor configuring for pwa installation

--- a/firebase.json
+++ b/firebase.json
@@ -16,7 +16,7 @@
       }
     ],
     "headers": [
-      {"source": "/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}]}
+      {"source": "/serviceWorker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}]}
     ]
   }
 }
