added basic files for BudgetSheet and BudgetItem

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Fiouse Budgets",
+  "name": "Budgets by Fiouse",
   "icons": [
     {
       "src": "f_logo_clear.png",
